# mycelot

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
mycelot/: catalog.py  cli.py  file.py  file_reference.py  serializer.py
mycelot/exceptions/: file_exists.py
tests/: test_catalog.py
