[tool.poetry]
name = "mycelot"
version = "0.1.0"
description = ""
authors = ["David Černý <18537381+cernyd@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pytest = "^7.4.3"
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
